test/asm/invalid-alignment.err
error: Section is misaligned (at PC = $4000, expected ALIGN[16, 0], got ALIGN[16, 16384])
    at invalid-alignment.asm(9)
error: Alignment must be between 0 and 16, not 20
    at invalid-alignment.asm(11)
error: Alignment must be between 0 and 16, not 20
    at invalid-alignment.asm(13)
error: Alignment must be between 0 and 16, not 20
    at invalid-alignment.asm(15)
error: Section "d"'s fixed address does not match its alignment
    at invalid-alignment.asm(19)
error: Section "e"'s fixed address does not match its alignment
    at invalid-alignment.asm(21)
error: Section "f"'s fixed address does not match its alignment
    at invalid-alignment.asm(23)
Assembly aborted with 7 errors
